--- a/package.json
+++ b/package.json
@@ -18,9 +18,20 @@
   },
   "homepage": "https://github.com/xosebastian/challenge#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "D": "^1.0.0",
+    "connected-react-router": "^6.8.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -29,8 +40,11 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "file-loader": "^6.1.1",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^1.3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
