--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.21.5",
     "file-loader": "^6.1.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
